<resources>
    <string name="app_name">Smart Parent</string>


    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="no_response">No response from server.\nPlease try again later.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="internal_server_error">Internal server error.</string>

    <string name="play_service_title">Google Play Service Not Available</string>
    <string name="play_service_content">You Must Download Google Play Service.</string>
    <string name="play_service_waiting">Initializing apps, please wait.</string>

    <string name="loading">Please Wait</string>
    <string name="login_loading">Logging In</string>
    <string name="downloading">Downloading data</string>

    <string name="pull_to_refresh">Pull To Refresh</string>


    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="img_desc">Image Description</string>
    <string name="empty_username">Username is required</string>
    <string name="empty_password">Password is required</string>
    <string name="empty_form">Tidak boleh kosong</string>

    <string name="darul_abidin">SDIT Darul Abidin</string>
    <string name="kelas">Kelas </string>
    <string name="rupiah">Rp.</string>
    <string name="keterangan">Keterangan : </string>
    <string name="sejumlah">Sejumlah </string>

    <string name="hint_saldo">Masukkan nominal disini</string>
    <string name="txtInputSaldo">Pengaturan batas harian uang saku :</string>
    <string name="submit">Submit</string>
    <string name="txtKeteranganSaldo">Telah diisi pada : </string>
    <string name="txtRiwayatSaldo">Riwayat Pengisian</string>
    <string name="txtSaldo">Saldo</string>
    <string name="txtInfoSaldo">INFO SALDO</string>
    <string name="titikDua"> : </string>

</resources>
