<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/less_white"
    android:orientation="vertical"
    tools:context="pnj.ti.b2013.smartparent.view.studentBalance.BalanceActivity">

    <RelativeLayout
        android:id="@+id/studentEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_igrow" />

        <FrameLayout
            android:id="@+id/mainFrameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mainToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_padding"
                    android:text="@string/txtInfoSaldo"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_margin="@dimen/large_padding"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/img_desc"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_uang_saku"/>

                    <TextView
                        android:id="@+id/tvSaldo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fitsSystemWindows="true"
                        android:text="@string/txtSaldo"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/titikDua" />

                    <TextView
                        android:id="@+id/saldoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="25sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtRiwayatSaldo"
                    android:layout_margin="@dimen/large_padding"
                    android:textSize="18sp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/small_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/small_padding"
                            android:text="@string/txtKeteranganSaldo"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/infoSaldoDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/small_padding"
                             />


                        <TextView
                            android:id="@+id/infoSaldoValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/small_padding"
                             />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_padding"
                    android:text="@string/txtInputSaldo"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/valueLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_padding"
                    android:hint="@string/hint_saldo"/>

                <Button
                    android:id="@+id/btnSubmitLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/large_padding"
                    android:layout_marginRight="@dimen/large_padding"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:height="@dimen/action_button_min_height_material"
                    android:background="@drawable/selectable_primary"
                    android:text="@string/submit"
                    android:textColor="@color/button_title_color" />

            </LinearLayout>







        </FrameLayout>

    </RelativeLayout>




</LinearLayout>
