<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pnj.ti.b2013.smartparent.view.LoginActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:fillViewport="true"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogoImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/large_padding"
                android:src="@drawable/logo_smartparent" />

            <LinearLayout
                android:layout_marginRight="@dimen/large_padding"
                android:layout_marginLeft="@dimen/large_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/medium_padding"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_profile" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/loginUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_padding">

                    <EditText
                        android:id="@+id/loginUsernameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="@dimen/large_padding"
                android:layout_marginLeft="@dimen/large_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/medium_padding"
                    android:src="@drawable/ic_password" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/loginPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_padding">

                    <EditText
                        android:id="@+id/loginPasswordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:height="@dimen/action_button_min_height_material"
                android:background="@drawable/selectable_primary"
                android:text="@string/login"
                android:textColor="@color/button_title_color"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/large_padding"
                android:layout_marginLeft="@dimen/large_padding"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
